fix aligning for the 3rd time

--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -478,6 +478,12 @@ dialog h2 {
     padding: 20px;
 }
 
+#test-modals {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 dialog p, ul {
     padding: 10px;
 }
